<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.RegisterActivity"
    android:orientation="vertical"
    android:background="@drawable/tacos">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:src="@drawable/logo1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="New User Account"
        android:textColor="@color/pinky"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_margin="30dp"
        android:layout_marginTop="20dp"
        android:gravity="center"/>


    <EditText
        android:id="@+id/edtFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:hint="FirstName"
        android:textColor="@color/white"
        android:layout_margin="20dp"
        android:textSize="30sp"
        />
    <EditText
        android:id="@+id/edtLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:hint="Lastname"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:textSize="30sp"
        />

    <EditText
        android:id="@+id/edtUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:hint="Enter your username"
        android:textColor="@color/white"
        android:layout_margin="20dp"
        android:textSize="30sp"
        />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:hint="Enter your email"
        android:textColor="@color/white"
        android:layout_margin="20dp"
        android:textSize="30sp"
        />


    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:hint="Enter your Password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:layout_margin="20dp"
        android:textSize="30sp"
        />

<!--    <Spinner-->
<!--        android:id="@+id/spinner1"-->
<!--        android:layout_width="200dp"-->
<!--        android:layout_gravity="center"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="@android:drawable/btn_dropdown"-->
<!--        android:spinnerMode="dropdown"/>-->


    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="50dp"
        android:padding="20dp"
        android:layout_marginRight="50dp"
        android:text="REGISTER"
        android:textSize="30sp"
        android:background="@color/darkblue"
        android:textColor="@color/white"
        />



</LinearLayout>

